<resources>
    <string name="app_name">Kor.ona</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kor.ona</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_area">지역별 현황 지도</string>
    <string name="menu_route">확진자 경로 확인</string>
    <string name="menu_alert">경보 단계 확인</string>
    <string name="menu_notification">실시간 공지사항</string>
    <string name="menu_settings">환경 설정</string>
    <string name="menu_feedback">Feedback</string>

    <string name="default_notification_channel_id">Channel ID</string>
    <string name="default_notification_channel_name" translatable="true">Test</string>


    <string name="admob_app_id">ca-app-pub-9402094076267078~3564601417</string>
    <string name="banner_ad_unit_id">ca-app-pub-9402094076267078/6825189571</string>
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>

    <string name="item_date">"날짜"</string>
    <string name="item_place">"장소"</string>
    <string name="item_comment">"내용"</string>

    <string name="pref_key_route">route_alarm</string>
    <string name="pref_key_diagnose">diagnose_alarm</string>
    <string name="pref_key_dead">dead_alarm</string>

</resources>
