<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_route"
            android:icon="@drawable/ic_menu_route"
            android:title="@string/menu_route" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_menu_notification"
            android:title="@string/menu_notification" />
        <item
            android:id="@+id/nav_area"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_area"/>
        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/ic_menu_alert"
            android:title="@string/menu_alert"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings"/>

    </group>

</menu>
